--- a/cart.html
+++ b/cart.html
@@ -39,12 +39,8 @@
                                     <li>
                                         <a href="index.html">首页</a>
                                     </li>
-                                    <li class="menu-item-has-children">
+                                    <li>
                                         <a href="shop-left-sidebar.html">购物</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="shop-left-sidebar.html">选择物品</a></li>
-                                            <li><a href="shop-full-width.html">大图阅览</a></li>
-                                        </ul>
                                     </li>
                                     <li class="menu-item-has-children">
                                         <a href="#">我的</a>
@@ -144,13 +140,10 @@
                             <li>
                                 <a href="index.html">首页</a>
                             </li>
-                            <li class="menu-item-has-children">
+                            <li>
                                 <a href="shop-left-sidebar.html">购物</a>
-                                <ul class="sub-menu">
-                                    <li><a href="shop-left-sidebar.html">选择物品</a></li>
-                                    <li><a href="shop-full-width.html">大图阅览</a></li>
-                                </ul>
                             </li>
+
                             <li class="menu-item-has-children">
                                 <a href="#">我的</a>
                                 <ul class="sub-menu">
@@ -279,36 +272,7 @@
             </div>
         </div>
         <!-- Cart e -->
-        <!-- 订阅 s -->
-        <div class="subscribe-section section bg-light-blue pt-55 pb-55">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-10 ml-auto mr-auto col-12">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6 col-12 mb-15 mt-15">
-                                <div class="subscribe-content">
-                                    <h2>订阅我们的时事通讯</h2>
-                                    <h4>立即订阅并获得15%<br>折扣杯代码</h4>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-12 mb-15 mt-15">
-                                <form id="mc-form" class="mc-form subscribe-form">
-                                    <input id="mc-email" type="email" autocomplete="off" placeholder="在此输入您的邮箱" />
-                                    <button id="mc-submit">订阅</button>
-                                </form>
-                                <div class="mailchimp-alerts text-centre">
-                                    <div class="mailchimp-submitting"></div>
-                                    <div class="mailchimp-success"></div>
-                                    <div class="mailchimp-error"></div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- 订阅 e -->
+        
         <!--  Footer  -->
         <footer class="footer-section section">
 
@@ -406,12 +370,11 @@
 
                         <div class="col-sm-5 col-lg-6 m-auto order-3 order-sm-2 text-center text-sm-left text-lg-center">
                             <div class="copyright-text mt-xs-10 ">
-                                <p>&copy; 2019 <a href="index.html">Olson</a>, All rights <a href="http://www.bootstrapmb.com/" title="bootstrapmb">Reserved</a>.</p>
+                                <p>&copy; 2019 <a href="index.html">pinxixi</a>, 权利所有者<a href="#" title="bootstrapmb">专属</a>.</p>
                             </div>
                         </div>
 
                         <div class="col-sm-4 col-lg-3 m-auto order-2 text-center text-md-right">
-                            <img src="images/payments.png" alt="Payment Method" />
                         </div>
                     </div>
                 </div>
