--- a/register.html
+++ b/register.html
@@ -41,13 +41,10 @@
                                     <li>
                                         <a href="index.html">首页</a>
                                     </li>
-                                    <li class="menu-item-has-children">
+                                    <li>
                                         <a href="shop-left-sidebar.html">购物</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="shop-left-sidebar.html">选择物品</a></li>
-                                            <li><a href="shop-full-width.html">大图阅览</a></li>
-                                        </ul>
                                     </li>
+
                                     <li class="menu-item-has-children">
                                         <a href="#">我的</a>
                                         <ul class="sub-menu">
@@ -146,13 +143,10 @@
                             <li>
                                 <a href="index.html">首页</a>
                             </li>
-                            <li class="menu-item-has-children">
+                            <li>
                                 <a href="shop-left-sidebar.html">购物</a>
-                                <ul class="sub-menu">
-                                    <li><a href="shop-left-sidebar.html">选择物品</a></li>
-                                    <li><a href="shop-full-width.html">大图阅览</a></li>
-                                </ul>
                             </li>
+
                             <li class="menu-item-has-children">
                                 <a href="#">我的</a>
                                 <ul class="sub-menu">
@@ -212,8 +206,12 @@
                         <div class="login-register-form-wrap">
                             <form class="mb-30" nethod="post" action="/ashx/Register_check.ashx">
                                 <div class="row">
-                                    <div class="col-12 mb-15"><input name="textId" type="text" placeholder="账号"></div>
-                                    <div class="col-12 mb-15"><input name="textName" type="text" placeholder="姓名"></div>
+                                    <div class="col-12 mb-15">
+                                        <input onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" name="textId" placeholder="账号(数字)">
+                                    </div>
+                                    <div class="col-12 mb-15">
+                                        <input onkeyup="value=value.replace(/[\d]/g,'') "onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[\d]/g,''))" maxlength=10 name="Numbers" placeholder="姓名(字母或汉字)">
+                                    </div>
                                     <div class="col-12 mb-15"><input name="textPwd" type="password" placeholder="密码"></div>
                                     <div class="col-12"><!--<input type="submit" value="注册">-->
                                     <a href="#"><input type="button" value="注册"></a>
@@ -231,36 +229,7 @@
             </div>
         </div>
         <!--  e -->
-        <!-- 订阅 s -->
-        <div class="subscribe-section section bg-light-blue pt-55 pb-55">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-10 ml-auto mr-auto col-12">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6 col-12 mb-15 mt-15">
-                                <div class="subscribe-content">
-                                    <h2>订阅我们的时事通讯</h2>
-                                    <h4>立即订阅并获得15%<br>折扣杯代码</h4>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-12 mb-15 mt-15">
-                                <form id="mc-form" class="mc-form subscribe-form">
-                                    <input id="mc-email" type="email" autocomplete="off" placeholder="在此输入您的邮箱" />
-                                    <button id="mc-submit">订阅</button>
-                                </form>
-                                <div class="mailchimp-alerts text-centre">
-                                    <div class="mailchimp-submitting"></div>
-                                    <div class="mailchimp-success"></div>
-                                    <div class="mailchimp-error"></div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- 订阅 e -->
+       
         <!--  Footer s -->
         <footer class="footer-section section">
 
@@ -358,12 +327,11 @@
 
                         <div class="col-sm-5 col-lg-6 m-auto order-3 order-sm-2 text-center text-sm-left text-lg-center">
                             <div class="copyright-text mt-xs-10 ">
-                                <p>&copy; 2019 <a href="index.html">pinxixi</a>, 权利所有着<a href="#" title="bootstrapmb">所列数据，除特殊说明，所有数据均出自我司实验室测试</a>.</p>
+                                <p>&copy; 2019 <a href="index.html">pinxixi</a>, 权利所有者<a href="#" title="bootstrapmb">专属</a>.</p>
                             </div>
                         </div>
 
                         <div class="col-sm-4 col-lg-3 m-auto order-2 text-center text-md-right">
-                            <img src="images/payments.png" alt="Payment Method" />
                         </div>
                     </div>
                 </div>
