--- a/single-product.html
+++ b/single-product.html
@@ -412,6 +412,7 @@
 
                         <div class="col-sm-5 col-lg-6 m-auto order-3 order-sm-2 text-center text-sm-left text-lg-center">
                             <div class="copyright-text mt-xs-10 ">
+							<p>&copy; 2019 <a href="index.html">pinxixi</a>, 权利所有者<a href="#" title="bootstrapmb">专属</a>.</p>
                             </div>
                         </div>
 
